# SchoolChallenges-Rust

./: Cargo.toml  README.md  test.py
src/: challenge_10.rs  challenge_12.rs  challenge_16.rs  challenge_19.rs  challenge_26.rs  challenge_29.rs  challenge_3.rs  challenge_30.rs  challenge_31.rs  challenge_32.rs  challenge_33.rs  challenge_36.rs  challenge_37.rs  challenge_38.rs  challenge_39.rs  challenge_4.rs  challenge_5.rs  challenge_6.rs  challenge_7.rs  main.rs  utils.rs
src/difficulty_1/: challenge_1.rs  challenge_2.rs  challenge_3.rs  challenge_4.rs
src/difficulty_10/: challenge_40.rs
src/difficulty_2/: challenge_5.rs  challenge_6.rs  challenge_7.rs
src/difficulty_3/: challenge_8.rs
src/difficulty_4/: challenge_10.rs  challenge_11.rs  challenge_12.rs  challenge_13.rs  challenge_9.rs
src/difficulty_5/: challenge_14.rs  challenge_15.rs  challenge_16.rs  challenge_17.rs  challenge_18.rs  challenge_19.rs  challenge_20.rs  challenge_20.txt  challenge_21.rs  challenge_22.rs  challenge_23.rs  challenge_24.rs  challenge_25.rs  challenge_26.rs  challenge_27.rs
src/difficulty_6/: challenge_28.rs  challenge_29.rs  challenge_30.rs  challenge_31.rs  challenge_32.rs
src/difficulty_7/: challenge_33.rs  challenge_34.rs  challenge_35.rs
src/difficulty_8/: challenge_36.rs  challenge_37.rs
src/difficulty_9/: challenge_38.rs  challenge_39.rs
