[package]
name = "school-challenges-rust"
version = "0.1.0"
edition = "2024"

[lib]
name = "school_challenges_rust"
path = "src/lib.rs"

[[bin]]
name = "challenge_1"
path = "src/difficulty_1/challenge_1.rs"

[[bin]]
name = "challenge_2"
path = "src/difficulty_1/challenge_2.rs"

[[bin]]
name = "challenge_3"
path = "src/difficulty_1/challenge_3.rs"

[[bin]]
name = "challenge_4"
path = "src/difficulty_1/challenge_4.rs"

[[bin]]
name = "challenge_5"
path = "src/difficulty_2/challenge_5.rs"

[[bin]]
name = "challenge_6"
path = "src/difficulty_2/challenge_6.rs"

[[bin]]
name = "challenge_7"
path = "src/difficulty_2/challenge_7.rs"

[[bin]]
name = "challenge_8"
path = "src/difficulty_3/challenge_8.rs"

[[bin]]
name = "challenge_9"
path = "src/difficulty_4/challenge_9.rs"

[[bin]]
name = "challenge_10"
path = "src/difficulty_4/challenge_10.rs"

[[bin]]
name = "challenge_11"
path = "src/difficulty_4/challenge_11.rs"

[[bin]]
name = "challenge_12"
path = "src/difficulty_4/challenge_12.rs"

[[bin]]
name = "challenge_13"
path = "src/difficulty_4/challenge_13.rs"

[[bin]]
name = "challenge_14"
path = "src/difficulty_5/challenge_14.rs"

[[bin]]
name = "challenge_15"
path = "src/difficulty_5/challenge_15.rs"

[[bin]]
name = "challenge_16"
path = "src/difficulty_5/challenge_16.rs"

[[bin]]
name = "challenge_17"
path = "src/difficulty_5/challenge_17.rs"

[[bin]]
name = "challenge_18"
path = "src/difficulty_5/challenge_18.rs"

[[bin]]
name = "challenge_19"
path = "src/difficulty_5/challenge_19.rs"

[[bin]]
name = "challenge_20"
path = "src/difficulty_5/challenge_20.rs"

[[bin]]
name = "challenge_21"
path = "src/difficulty_5/challenge_21.rs"

[[bin]]
name = "challenge_22"
path = "src/difficulty_5/challenge_22.rs"

[[bin]]
name = "challenge_23"
path = "src/difficulty_5/challenge_23.rs"

[[bin]]
name = "challenge_24"
path = "src/difficulty_5/challenge_24.rs"

[[bin]]
name = "challenge_25"
path = "src/difficulty_5/challenge_25.rs"

[[bin]]
name = "challenge_26"
path = "src/difficulty_5/challenge_26.rs"

[[bin]]
name = "challenge_27"
path = "src/difficulty_5/challenge_27.rs"

[[bin]]
name = "challenge_28"
path = "src/difficulty_6/challenge_28.rs"

[[bin]]
name = "challenge_29"
path = "src/difficulty_6/challenge_29.rs"

[[bin]]
name = "challenge_30"
path = "src/difficulty_6/challenge_30.rs"

[[bin]]
name = "challenge_31"
path = "src/difficulty_6/challenge_31.rs"

[[bin]]
name = "challenge_32"
path = "src/difficulty_6/challenge_32.rs"

[[bin]]
name = "challenge_33"
path = "src/difficulty_7/challenge_33.rs"

[[bin]]
name = "challenge_34"
path = "src/difficulty_7/challenge_34.rs"

[[bin]]
name = "challenge_35"
path = "src/difficulty_7/challenge_35.rs"

[[bin]]
name = "challenge_36"
path = "src/difficulty_8/challenge_36.rs"

[[bin]]
name = "challenge_37"
path = "src/difficulty_8/challenge_37.rs"

[[bin]]
name = "challenge_38"
path = "src/difficulty_9/challenge_38.rs"

[[bin]]
name = "challenge_39"
path = "src/difficulty_9/challenge_39.rs"

[[bin]]
name = "challenge_40"
path = "src/difficulty_10/challenge_40.rs"
